k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wisecow-ingress
#   namespace: wisecow
#   annotations:
#     cert-manager.io/cluster-issuer: "selfsigned-issuer"
# spec:
#   ingressClassName: nginx 
#   tls:
#     - hosts:
#         - wisecow.local
#       secretName: wisecow-tls
#   rules:
#     - host: wisecow.local
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: wisecow-service
#                 port:
#                   number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: wisecow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  tls:
    - hosts:
        - wisecow.local
      secretName: wisecow-tls
  rules:
    - host: wisecow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 80
